# RedAtlas_scrapping_test

./: .gitignore  CAMBIOS.md  README.md  cambios.md  challenge_senior.html  cron_healthcheck.sh  dashboard.py  debug_403.html  debug_fetch.py  debug_page.html  healthcheck.py  listings.db  pyproject.toml  scraper.py
expl/: NARRACION_PODCAST.md  PROCESO_Y_CODIGO.md  README.md
