[project]
name = "prueba-scrapping"
version = "0.1.0"
description = ""
authors = [
    {name = "zapatagustin",email = "zapatagustin4@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "playwright (>=1.59.0,<2.0.0)",
    "curl-cffi (>=0.15.0,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
